third_party/WebKit/Source/core/dom/Element.cpp
@@ -3029,6 +3029,7 @@ void Element::setFloatingPointAttribute(const QualifiedName& attributeName, doub
 void Element::setContainsFullScreenElement(bool flag)
 {
     setElementFlag(ContainsFullScreenElement, flag);
+    document().styleEngine().ensureFullscreenUAStyle();
     pseudoStateChanged(CSSSelector::PseudoFullScreenAncestor);
 }
 
